--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,9 +6,9 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Install dependencies
-        run: sudo apt install -y qtdeclarative5-dev-tools qml-module-qttest
+        run: sudo apt install -y qtdeclarative5-dev-tools qml-module-qttest libxcb-xinerama0
       - name: QmlTestRunner
         run: |
           export DISPLAY=:99
